--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>RocketCoffee</title>
-        <link href="C:\Users\deres\Downloads\Words\Lógica/teste.css" rel="stylesheet">
+        <link href="cardapio/style.css" rel="stylesheet">
     </head>
     <body>
 
